Bug 429498 - Location bar does not search consistently (matches 1-after a CamelCase). r=dietrich, b-ff3=beltzner, a1.9=mconnor